# uncertainty-gated-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  ANCHOR_VS_BASELINE_50Q_ANALYSIS.md  BAUG_EVAL_RESULTS_20Q.md  BAUG_FIXES_APPLIED.md  BAUG_FIX_ROADMAP.md  BAUG_GATE_IMPROVEMENTS.md  BAUG_IMPACT_ANALYSIS.md  BAUG_IMPROVEMENTS_APPLIED.md  Benchmark report.md  FINAL_BAUG_ANALYSIS.md  FINAL_THESIS_ANALYSIS_100Q.md  LICENSE  Makefile  My-experiment-note.md  PERFORMANCE_IMPROVEMENTS.md  README.md  REPORT.md  RETRIEVAL_IMPROVEMENTS.md  SOLUTION_GUIDE.md  SYSTEM_COMPARISON_5Q.md  TODAYS_IMPROVEMENTS_SUMMARY.md  USE_OFFLINE_EMBEDDINGS.md  analyze_corpus_quality.py  challenging_questions.jsonl  check_crag_structure.py  check_dimensions.py  check_embeddings.py  count_dataset.py  deep reserach analysis.md  diagnose_corpus_prep.py  mypy.ini  note.md  parse_logs.py  prepare_full_corpus.ps1  pyproject.toml  pytest.ini  rebuild_crag_corpus.ps1  rebuild_crag_corpus_offline.ps1  (+12 more)
.github/workflows/: ci.yml  e2e.yml
artifacts/faiss/: chunks.parquet  index.faiss  meta.parquet
docs/: runbook.md
eval/: __init__.py  cli_judge.py  compute_benchmarks.py  gpt_agent_judge.py  idk_policy.py  rubrics.py
eval/tests/: test_gpt_agent_judge.py  test_idk_policy.py
my-notes/: My-experiment-note.md  README.md  agentic_implementation_summary.md  documentation_report.md  metric-explanation.md  metrics.md  report_template.md
my-notes/design/: agentic.md  gate.md
my-notes/experiments/: 2025-09-18_CRAG-Full-Evaluation.md
scripts/: analyze_per_question.js  analyze_run.js  check_openai.py  compare_runs.js  compare_runs.py  crag_full_download.py  prepare_crag.py  prepare_crag_from_jsonl.py  reset_crag.ps1  run_eval_with_judge.py  test_agentic_features.py
tests/: conftest.py  test_anchor_validators.py  test_citation_parsing.py  test_config.py  test_enhanced_gate.py  test_eval_hardening.py  test_gate.py  test_logging.py  test_metrics_minimal.py  test_pipeline.py  test_telemetry_and_early_stop.py
(+61 files in other folders)
